--- a/resources/sass/gava/_icons.scss
+++ b/resources/sass/gava/_icons.scss
@@ -35,3 +35,16 @@
 .arrow-icon {
     width: 31px;
 }
+
+.subscribe-icon, .nav-icon {
+    height: 35px;
+    width: auto;
+}
+
+.rating .report-icon {
+    width: 15px;
+} 
+
+.filter-icon {
+    width: 80px;
+}
