--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,7 @@
 @import 'gava/multiselects';
 @import 'gava/scrollbar';
 @import 'gava/forms';
+@import 'gava/menus';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
