--- a/resources/sass/gava/_links.scss
+++ b/resources/sass/gava/_links.scss
@@ -9,6 +9,10 @@
     &.link-secondary {
         background: $gradient-primary;
     }
+
+    &.subscribers-link {
+        color: $btn-primary-color;
+    }
 }
 
 .menu .nav-link {
