--- a/resources/sass/gava/_icons.scss
+++ b/resources/sass/gava/_icons.scss
@@ -52,3 +52,7 @@
 .mobile-course-options img, .mobile-video-options img {
     width: 4px;
 }
+
+.premium_comment_username_icon {
+    width: 12px;
+}
