--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Product Sans";
+    src:url(/fonts/Product\Sans\Regular.ttf)
+}
+
 // Body
 $menu-bg: #050547;
 
@@ -9,11 +14,14 @@ $line-height-base: 1.6;
 // Colors
 $color-primary: #3AD7F0;
 $color-secondary: #4951CF;
-$color-thirthiary: #D01CE2;
+$color-tertiary: #6E27D4;
+$color-quinary: #D01CE2;
 $gradient-primary: linear-gradient(to top right, #4951CF, #3AD7F0);
 $gradient-secondary: linear-gradient(to top right, #6E27D4, #D01CE2);
 $text-color: #000;
 $btn-primary-color: #291875;
 $btn-primary-hover-color: #1f1259;
 $btn-secondary-hover-color: #1ad1ee;
+$btn-tertiary-hover-color: #333cc3;
+$btn-quaternary-hover-color: #5f22b7;
 $checked-star-color: #4951CF;
