--- a/resources/sass/gava/_icons.scss
+++ b/resources/sass/gava/_icons.scss
@@ -56,3 +56,11 @@
 .premium_comment_username_icon {
     width: 12px;
 }
+
+.like-comment img  {
+    width: 17.41px;
+}
+
+.upvote-comment img {
+    height: 14.99px;
+}
