--- a/public/css/app.css
+++ b/public/css/app.css
@@ -731,6 +731,14 @@ span {
   width: 12px;
 }
 
+.like-comment img {
+  width: 17.41px;
+}
+
+.upvote-comment img {
+  height: 14.99px;
+}
+
 .ms-offscreen {
   clip: rect(0 0 0 0) !important;
   width: 1px !important;
