Finished total views and table of views

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -595,6 +595,10 @@ span {
   font-size: 10px;
 }
 
+.statistic-container {
+  border-radius: 10px !important;
+}
+
 .rating-overview {
   border-bottom: 1px solid #dee2e6;
 }
