--- a/resources/sass/gava/_links.scss
+++ b/resources/sass/gava/_links.scss
@@ -13,6 +13,8 @@
     &.subscribers-link {
         color: $btn-primary-color;
     }
+
+
 }
 
 .menu .nav-link {
@@ -32,6 +34,7 @@
 
 .mobile-menu .nav-link {
     font-size: 14px;
+    padding: 10px;
 }
 
 .auth-link {
