--- a/resources/sass/gava/_icons.scss
+++ b/resources/sass/gava/_icons.scss
@@ -33,7 +33,7 @@
 }
 
 .arrow-icon {
-    width: 31px;
+    width: 22px;
 }
 
 .subscribe-icon, .nav-icon {
@@ -67,4 +67,8 @@
 
 .revenue-icon {
     width: 12px;
+}
+
+.setting-icon, .report-icon-profile {
+    width: 25px;
 }
