--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,7 @@
 @import 'gava/scrollbar';
 @import 'gava/forms';
 @import 'gava/menus';
+@import 'gava/video';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
