--- a/resources/sass/gava/_container.scss
+++ b/resources/sass/gava/_container.scss
@@ -19,6 +19,21 @@
     margin-top: -80px !important;
 }
 
+.login-popup-container {
+    left: 0;
+    right: 0;
+    bottom: 120px;
+    z-index: 1040;
+
+    & div.row {
+        max-width: 720px;
+        border-radius: 10px;
+        -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.16);
+        -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.16);
+        box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.16);
+    }
+}
+
 @media(max-width: 768px) {
     .filter-container {
         background-color: white;
@@ -27,12 +42,16 @@
         bottom: 0;
         left: 0;
         right: 0;
-        z-index: 1040;
+        z-index: 1050;
     }
 }
 
 @media(min-width: 768px) {
     .rating-overview {
         border-bottom: 0px !important;
+    }
+
+    .login-popup-container {
+        bottom: 20px;
     }
 }
