--- a/resources/sass/gava/_links.scss
+++ b/resources/sass/gava/_links.scss
@@ -14,6 +14,10 @@
         color: $btn-primary-color;
     }
 
+    &.login-popup-link {
+        text-decoration: underline;
+        color: #291875;
+    }
 
 }
 
