--- a/resources/sass/gava/_buttons.scss
+++ b/resources/sass/gava/_buttons.scss
@@ -4,7 +4,7 @@
 }
 
 .btn {
-    color: white !important;
+    color: white;
     border: 0px !important;
     border-radius: 0;
     padding: 8px 15px;
