--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,7 +11,7 @@
 }
 
 .btn {
-  color: white !important;
+  color: white;
   border: 0px !important;
   border-radius: 0;
   padding: 8px 15px;
@@ -418,6 +418,7 @@ h2 {
 .reported {
   opacity: 0.5;
   pointer-events: none;
+  cursor: none;
 }
 
 .link {
